# planta-automation

./: .gitignore  MANIFEST.in  README.md  calculations.py  config.py  default_reference.csv  man_page.txt  manual-tests.md  planta_filler.py  planta_selectors.yaml  pyproject.toml  reference_handler.py  requirements.txt  strategies.py  validation.py  week_handler.py
.github/: copilot-instructions.md
src/planta_filler/: __init__.py  __main__.py  calculations.py  cli.py  config.py  core.py  reference_handler.py  strategies.py  validation.py  week_handler.py
src/planta_filler/data/: default_reference.csv  first-days.csv  man_page.txt  new_reference.csv  planning_week.csv  ref.csv  travel-day.csv  vacation-homecoming.csv
tests/: conftest.py  test_calculations.py  test_cli_arguments.py  test_core.py  test_reference_handler.py  test_strategies.py  test_title_check.py  test_validation.py  test_week_handler.py
