[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planta-filler"
version = "0.1.0"
description = "Selenium-based automation for PLANTA timesheet filling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Felix Paul"}
]
keywords = ["planta", "timesheet", "automation", "selenium"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    "selenium>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]

[project.scripts]
planta-filler = "planta_filler.cli:main"

[project.urls]
Homepage = "https://github.com/d-solve-de/planta-automation"
Repository = "https://github.com/d-solve-de/planta-automation"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
planta_filler = ["data/*.txt", "data/*.csv"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
